<resources>
    <string name="app_name">Ma reu</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="ok">ok</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>



    <string-array name="Guest_List">
        <item> Francis@lamzone.fr</item>
        <item> Alexandra@lamzone.fr</item>
        <item> Luc@lamzone.fr</item>
        <item> Amandine@lamzone.fr</item>
        <item> Paul@lamzone.fr</item>
        <item> Viviane@lamzone.fr</item>
        <item> Quentin@lamzone.fr</item>
        <item> Maxime@lamzone.fr</item>
        <item> Denis@lamzone.fr</item>
    </string-array>

</resources>